--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -73,6 +73,7 @@
             android:textSize="40sp" />
 
         <Button
+            android:id="@+id/btnTransferir"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
