--- a/app/src/main/res/layout/transaction_activity.xml
+++ b/app/src/main/res/layout/transaction_activity.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="76dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Cuenta ordenante"
+        android:text="Ordering account"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -82,7 +82,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:hint="Monto"
+        android:hint="Amount"
         android:inputType="number"
     app:layout_constraintTop_toBottomOf="@+id/textView5"
         tools:layout_editor_absoluteX="0dp" />
@@ -105,8 +105,8 @@
         android:layout_marginTop="60dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Cuenta beneficiario"
-        android:textSize="25dp"
+        android:text="Beneficiary account"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
