--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="loginGreen">#8BC34A</color>
 
     <!-- Home Colors-->
-    <color name="transferirButton">#418ED3</color>
+    <color name="transferButton">#418ED3</color>
 </resources>
